added clock section

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
 
 
+
   <script type="application/ld+json">{
 		"@context": "http://schema.org",
 		"@type": "Organization",
@@ -77,16 +78,7 @@
       </div>
     </div>
   </section>
-  <section class="u-clearfix u-grey-5 u-section-2" id="sec-5180">
-    <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-      <h3 class="u-text u-text-1">Here to help</h3>
-      <p class="u-text u-text-2">Located in Nova Scotia, Canada, I can provide you with creative solutions to whatever
-        complex problem you may be facing with my expertise in software development, inventing, and reverse
-        engineering.<br>
-      </p>
-    </div>
-  </section>
-  <section class="u-align-center u-clearfix u-section-3" id="sec-4863">
+  <section class="u-align-center u-clearfix u-section-2" id="sec-4863">
     <div class="u-align-left u-clearfix u-sheet u-valign-middle u-sheet-1">
       <div class="u-expanded-width u-list u-list-1">
         <div class="u-repeater u-repeater-1">
@@ -122,7 +114,47 @@
       </div>
     </div>
   </section>
-  <section class="u-clearfix u-grey-5 u-section-4" id="carousel_1ca1">
+  <section class="u-clearfix u-grey-5 u-section-3" id="sec-5180">
+    <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+      <h3 class="u-text u-text-1">Here to help</h3>
+      <p class="u-text u-text-2">Located in Nova Scotia, Canada, I can provide you with creative solutions to whatever
+        complex problem you may be facing with my expertise in software development, inventing, and reverse
+        engineering.<br>
+      </p>
+    </div>
+  </section>
+  <section class="u-clearfix u-section-4" id="sec-1551">
+    <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+      <div class="fr-view u-align-center u-clearfix u-rich-text u-text u-text-1">
+        <h2 style="text-align: left;">Clock Example</h2>
+        <h4 style="text-align: left;">Problem</h4>
+        <p style="text-align: left;">I find it annoying knowing the exact time of day and obsessing over how I am
+          spending every minute of it. I prefer the traditional round analogue clock🕒beacuse of the rough approximation
+          of time it gives you and because you can manually set it ahead so that you arrive early. But the round clock
+          will not fit elegantly in the top status bar of my phone display or in the clock display of my desktop
+          computer.</p>
+        <h4 style="text-align: left;">Solution</h4>
+        <p style="text-align: left;"><iframe src="clockm.html" style="border:none;width: 100%;height: 180px;"></iframe>
+        </p>
+        <ul>
+          <li style="text-align: left;">The line in the center represents the 30 minute mark.</li>
+          <li style="text-align: left;">The lines with a cross through represent the 15 and 45 minute mark. (Like when
+            you count | one, || two, ||| three, |||| four, then add a cross for five).</li>
+          <li style="text-align: left;">Marking every five minutes like a round clock is too confusing in a small
+            display area. So only every 10 minutes are marked with vertical lines.</li>
+          <li style="text-align: left;">Try clicking the clock.</li>
+          <li style="text-align: left;">To change the color, click and drag on the color bar at the bottom to choose the
+            time of day, then choose the color using the color picker.&nbsp;</li>
+          <li style="text-align: left;">Use the big slider to preview your color choices.</li>
+          <li style="text-align: left;">Use the small slider to set your clock ahead by 1-2 minutes so that you are
+            always early. Clicking on the clock still gives you the accurate time!</li>
+          <li style="text-align: left;">Setting the color at different times of the day could be used to show
+            sunrise/sunset/dawn/dusk, work/lunch/home/sleep time etc.</li>
+        </ul>
+      </div>
+    </div>
+  </section>
+  <section class="u-clearfix u-grey-5 u-section-5" id="carousel_1ca1">
     <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
       <h3 class="u-text u-text-1">Contact Me</h3>
       <p class="u-text u-text-2">Feel free to reach out to me at <a href="mailto:quinton@mccamon.ca"
@@ -138,6 +170,17 @@
       <p class="u-small-text u-text u-text-variant u-text-1">mccamon.ca</p>
     </div>
   </footer>
+  <section class="u-backlink u-clearfix u-grey-80">
+    <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
+      <span>Website Templates</span>
+    </a>
+    <p class="u-text">
+      <span>created with</span>
+    </p>
+    <a class="u-link" href="" target="_blank">
+      <span>Website Builder Software</span>
+    </a>.
+  </section>
 
 </body>
 
