--- a/index.html
+++ b/index.html
@@ -134,7 +134,8 @@
           will not fit elegantly in the top status bar of my phone display or in the clock display of my desktop
           computer.</p>
         <h4 style="text-align: left;">Solution</h4>
-        <p style="text-align: left;"><iframe src="clockm.html" style="border:none;width: 100%;height: 180px;"></iframe>
+        <p style="text-align: left;"><iframe src="clockm.html?p"
+            style="border:none;width: 100%;height: 180px;"></iframe>
         </p>
         <ul>
           <li style="text-align: left;">The line in the center represents the 30 minute mark.</li>
@@ -144,7 +145,8 @@
             display area. So only every 10 minutes are marked with vertical lines.</li>
           <li style="text-align: left;">Try clicking the clock.</li>
           <li style="text-align: left;">To change the color, click and drag on the color bar at the bottom to choose the
-            time of day, then choose the color using the color picker.&nbsp;</li>
+            time of day, then choose the color using the color picker. (On mobile, long press like you are selecting
+            text)</li>
           <li style="text-align: left;">Use the big slider to preview your color choices.</li>
           <li style="text-align: left;">Use the small slider to set your clock ahead by 1-2 minutes so that you are
             always early. Clicking on the clock still gives you the accurate time!</li>
