--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="keywords" content="​Creative Engineering Solutions">
   <meta name="description" content="">
-  <title>Home</title>
+  <title>Quinton McCamon - Creative Engineering Solutions</title>
   <link rel="stylesheet" href="nicepage.css" media="screen">
   <link rel="stylesheet" href="Home.css" media="screen">
   <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
