mobile clock bugs

--- a/clockm.html
+++ b/clockm.html
@@ -102,6 +102,10 @@
             display: none
         }
 
+        #inner.hover {
+            min-width: 20%;
+        }
+
         #inner.hover i,
         #inner.hover u {
             display: inline;
