--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
           will not fit elegantly in the top status bar of my phone display or in the clock display of my desktop
           computer.</p>
         <h4 style="text-align: left;">Solution</h4>
-        <p style="text-align: left;"><iframe src="clockm.html?p"
+        <p style="text-align: left;"><iframe src="clockm.html?q"
             style="border:none;width: 100%;height: 180px;"></iframe>
         </p>
         <ul>
